add notebook for finetunign with xml files

--- a/Latest finetuning/Final_version_model.ipynb
+++ b/Latest finetuning/Final_version_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a9f48b24",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ca63217d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "bf7be42b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6df6fb74",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "bc0cbb76",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "9b837ef9",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "67b24384",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "9d1c0f5a",
    "metadata": {},
    "outputs": [],
@@ -334,17 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "9ac5cfa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The Company intends to buyback shares of its common stock, pay dividends to its shareholders, and has also made acquisitions to improve and expand its products and services.Identity services include the Company’s Sign in with Apple, Apple ID account, and Apple Pay Cash and Card, and many of these services rely on storing customer data. This data includes the customer’s name, address, and email in addition to other personal information such as IP address and telephone number. This customer data is stored and processed on Apple’s systems in the United States and in other parts of the world. \\n\\nTo understand the scope of the Company’s open source activities, the Company’s engineers created an Open Source Readiness Assessment. The Company uses tens of thousands of open source projects to build the suite of software and hardware products. The Company also has plans to continue to invest in research and development to maintain and enhance its existing products and to design and develop new products to perfectly meet the changing needs of its customers.\\n\\n“3 AM原价数据” is the mobile app provided by the Company. It allows users to translate barcodes of consumer products into information about the products offered for sale. These products include a variety of consumer products such as photographs, costumes and custom-ordered furniture.\\n\\n(defun foo (a) “abc $b@gmail.com” (foo (cadr a))'"
+       "'Apple\\'s strategic priorities include growing the active install base of iOS devices, investing in research and development to develop new products and services, expanding sales of Apple\\'s products and services in existing markets, \"expanding the distribution network to effectively reach more customers and provide an enhanced customer experience\", and expanding the financing options that Apple offers to customers.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Based on the information provided in the tables, the company's revenues and net income for the past two years are as follows:\\n\\nYear ended December 31, 2022:\\n- Revenue: $2,324.9 million\\n- Net income: $553.2 million\\n\\nYear ended December 31, 2021:\\n- Revenue: $2,157.9 million\\n- Net income: $335.8 million\\n\\nThe revenues have increased from $2,157.9 million in 2021 to $2,324.9 million in 2022, showing a change of $167.0 million or 8%. The net income has also increased from $335.8 million in 2021 to $553.2 million in 2022.\""
+       "\"According to the information provided in the 10-K document, the company's revenues and net income for the past two years are as follows:\\n\\nYear ended December 31, 2021:\\n- Revenue: $2,157.9 million\\n- Net income: $335.8 million\\n\\nYear ended December 31, 2022:\\n- Revenue: $2,324.9 million\\n- Net income: $553.2 million\\n\\nThe revenues increased by $167.0 million or 8% from 2021 to 2022. Net income increased from $335.8 million in 2021 to $553.2 million in 2022.\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,17 @@
     "                     \"Does the company operate in multiple geographic regions or industries?\",\n",
     "                     \"Are there any significant changes or developments in the company's business model, strategy, or competitive landscape?\",\n",
     "                     \"What were the company's revenues and net income for the past few years, and how have they changed over time?\",\n",
-    "                     \"What are the major drivers of revenue and profit growth or decline?\"\n",
+    "                     \"What are the major drivers of revenue and profit growth or decline?\",\n",
+    "                     \"Are there any significant trends or patterns in the company's financial statements?\",\n",
+    "                     \"Who are the company's key executives and board members? What is their experience and track record?\",\n",
+    "                     \"Are there any related-party transactions or potential conflicts of interest?\",\n",
+    "                     \"Does the company have effective internal controls and risk management procedures in place?\",\n",
+    "                     \"What is the company's overall financial health, including its liquidity, solvency, and capital structure?\",\n",
+    "                     \"How much debt does the company have, and what are the terms and conditions?\",\n",
+    "                     \"Are there any contingent liabilities or off-balance-sheet arrangements that could impact the company's financial position?\",\n",
+    "                     \"What are the primary risks and uncertainties the company faces? How might they impact its future performance?\",\n",
+    "                     \"Has the company identified any new risks or changed its risk profile since the previous filing?\",\n",
+    "                     \"Are there any legal or regulatory issues that could affect the company's operations?\"  \n",
     "                     ]\n",
     "\n",
     "path_to_test_10ks = [\"../Documents/dbx-10-k.pdf\", \"../Documents/google-10-k.pdf\", \"../Documents/netflix-10-k.pdf\"]\n"
@@ -430,37 +440,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "company path:  ../Documents/dbx-10-k.pdf question:  How does the company generate its revenue? What are its main products or services?\n",
-      "company path:  ../Documents/dbx-10-k.pdf question:  Does the company operate in multiple geographic regions or industries?\n",
-      "company path:  ../Documents/dbx-10-k.pdf question:  Are there any significant changes or developments in the company's business model, strategy, or competitive landscape?\n",
-      "company path:  ../Documents/dbx-10-k.pdf question:  What were the company's revenues and net income for the past few years, and how have they changed over time?\n",
-      "company path:  ../Documents/dbx-10-k.pdf question:  What are the major drivers of revenue and profit growth or decline?\n",
-      "company path:  ../Documents/google-10-k.pdf question:  How does the company generate its revenue? What are its main products or services?\n",
-      "company path:  ../Documents/google-10-k.pdf question:  Does the company operate in multiple geographic regions or industries?\n",
-      "company path:  ../Documents/google-10-k.pdf question:  Are there any significant changes or developments in the company's business model, strategy, or competitive landscape?\n",
-      "company path:  ../Documents/google-10-k.pdf question:  What were the company's revenues and net income for the past few years, and how have they changed over time?\n",
-      "company path:  ../Documents/google-10-k.pdf question:  What are the major drivers of revenue and profit growth or decline?\n",
-      "company path:  ../Documents/netflix-10-k.pdf question:  How does the company generate its revenue? What are its main products or services?\n",
-      "company path:  ../Documents/netflix-10-k.pdf question:  Does the company operate in multiple geographic regions or industries?\n",
-      "company path:  ../Documents/netflix-10-k.pdf question:  Are there any significant changes or developments in the company's business model, strategy, or competitive landscape?\n",
-      "company path:  ../Documents/netflix-10-k.pdf question:  What were the company's revenues and net income for the past few years, and how have they changed over time?\n",
-      "company path:  ../Documents/netflix-10-k.pdf question:  What are the major drivers of revenue and profit growth or decline?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for company_path in path_to_test_10ks:\n",
-    "    for question in questions_to_ask_trained_model:\n",
-    "        #print(\"company path: \", company_path, \"question: \", question)\n",
-    "        print(\"GPT's answer: \", ask_gpt_nonfinetuned_model(company_path, question))\n",
-    "        print(\"Our model's answer: \", ask_gpt_finetuned_model(company_path, question))"
+    "questions_test = [\"How does the company generate its revenue? What are its main products or services?\",\n",
+    "                     \"Does the company operate in multiple geographic regions or industries?\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('answers.txt', 'a') as file:\n",
+    "    for question in questions_test:\n",
+    "        for company_path in path_to_test_10ks:\n",
+    "            # Obtain the answers\n",
+    "            gpt_answer = ask_gpt_nonfinetuned_model(company_path, question)\n",
+    "            your_model_answer = ask_gpt_finetuned_model(company_path, question)\n",
+    "            \n",
+    "            # Write the answers to the text file\n",
+    "            file.write(f'Company Path: {company_path}\\n')\n",
+    "            file.write(f'Question: {question}\\n')\n",
+    "            file.write(f\"GPT's Answer: {gpt_answer}\\n\")\n",
+    "            file.write(f'Your Model\\'s Answer: {your_model_answer}\\n')\n",
+    "            file.write('\\n')"
    ]
   },
   {
