add evaluation doc

--- a/Latest finetuning/Final_version_model.ipynb
+++ b/Latest finetuning/Final_version_model.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a9f48b24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/pinecone/index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import PyPDF2\n",
     "from langchain.document_loaders import UnstructuredPDFLoader, OnlinePDFLoader, PyPDFLoader\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ca63217d",
    "metadata": {},
    "outputs": [],
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bf7be42b",
    "metadata": {},
    "outputs": [],
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6df6fb74",
    "metadata": {},
    "outputs": [],
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "bc0cbb76",
    "metadata": {},
    "outputs": [],
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "9b837ef9",
    "metadata": {},
    "outputs": [],
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "9d1c0f5a",
    "metadata": {},
    "outputs": [],
@@ -348,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,12 +445,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('answers.txt', 'a') as file:\n",
-    "    for question in questions_test:\n",
+    "with open('answers_newest.txt', 'a') as file:\n",
+    "    for question in questions_to_ask_trained_model:\n",
     "        for company_path in path_to_test_10ks:\n",
     "            # Obtain the answers\n",
     "            gpt_answer = ask_gpt_nonfinetuned_model(company_path, question)\n",
@@ -454,6 +463,13 @@
     "            file.write(f'Your Model\\'s Answer: {your_model_answer}\\n')\n",
     "            file.write('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
