edit evaluation script and make small changes to README

--- a/Latest finetuning/Final_version_model.ipynb
+++ b/Latest finetuning/Final_version_model.ipynb
@@ -435,21 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "questions_test = [\"How does the company generate its revenue? What are its main products or services?\",\n",
-    "                     \"Does the company operate in multiple geographic regions or industries?\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('answers_newest.txt', 'a') as file:\n",
+    "filename = 'answers_newest.txt' #replace this with the name of the file you want to write to\n",
+    "\n",
+    "with open(filename, 'a') as file: \n",
     "    for question in questions_to_ask_trained_model:\n",
     "        for company_path in path_to_test_10ks:\n",
     "            # Obtain the answers\n",
