--- a/Latest finetuning/Final_version_model.ipynb
+++ b/Latest finetuning/Final_version_model.ipynb
@@ -2,45 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "a9f48b24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/EdenChung/anaconda3/envs/machine_learning/lib/python3.9/site-packages/pinecone/index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import PyPDF2\n",
-    "from langchain.document_loaders import UnstructuredPDFLoader, OnlinePDFLoader, PyPDFLoader\n",
+    "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "import os\n",
-    "from langchain.vectorstores import Chroma, Pinecone\n",
-    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
-    "import pinecone\n",
-    "from langchain.vectorstores import FAISS\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.chains import RetrievalQA\n",
     "from langchain.vectorstores import Chroma\n",
-    "from langchain.docstore.document import Document\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
     "import json\n",
-    "import re\n",
     "import datetime\n",
     "import shutil\n",
-    "import openai"
+    "from openai import OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "ca63217d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "bf7be42b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "6df6fb74",
    "metadata": {},
    "outputs": [],
@@ -76,11 +57,12 @@
     "    documents = loader.load()\n",
     "\n",
     "    splitter = RecursiveCharacterTextSplitter(\n",
-    "        chunk_size=1200, \n",
+    "        chunk_size=1000, \n",
     "        chunk_overlap=5,\n",
     "        separators=[\"\\n\\n\", \"\\n\", \" \", \"\"],\n",
     "        length_function=len)\n",
     "    texts = splitter.split_documents(documents)\n",
+    "\n",
     "    vectordb = Chroma.from_documents(\n",
     "        documents=texts, \n",
     "        embedding=embeddings,\n",
@@ -93,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "bc0cbb76",
    "metadata": {},
    "outputs": [],
@@ -110,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "9b837ef9",
    "metadata": {},
    "outputs": [],
@@ -302,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "9d1c0f5a",
    "metadata": {},
    "outputs": [],
@@ -313,7 +295,9 @@
     "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
     "    source2 = db.similarity_search(question, k = 2)[1].page_content\n",
     "\n",
-    "    completion = openai.ChatCompletion.create(\n",
+    "    client = OpenAI()\n",
+    "\n",
+    "    completion = client.chat.completions.create(\n",
     "        model=\"ft:gpt-3.5-turbo-0613:personal:anote:8DO8V2LB\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"},\n",
@@ -323,23 +307,23 @@
     "\n",
     "    delete_chroma_db(db_dir)\n",
     "    \n",
-    "    return completion.choices[0].message[\"content\"]\n",
+    "    return completion.choices[0].message.content#[\"content\"]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "9ac5cfa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Apple\\'s strategic priorities include growing the active install base of iOS devices, investing in research and development to develop new products and services, expanding sales of Apple\\'s products and services in existing markets, \"expanding the distribution network to effectively reach more customers and provide an enhanced customer experience\", and expanding the financing options that Apple offers to customers.'"
+       "'The company’s research and development are focused on developing new and innovative products and technologies. Given the rapid pace of technological advances, the company believes that continual investment in research and development is critical to retain its competitive advantage.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
