add better comments and make small changes

--- a/Latest finetuning/Final_version_model.ipynb
+++ b/Latest finetuning/Final_version_model.ipynb
@@ -49,6 +49,16 @@
    "outputs": [],
    "source": [
     "def create_knowledge_hub(path_to_10k):\n",
+    "    \"\"\"From a 10-K document, create a Chroma DB knowledge hub.\n",
+    "\n",
+    "    Args:\n",
+    "        path_to_10k: Relative path to the 10-K hosted locally on the user's computer\n",
+    "\n",
+    "    Returns:\n",
+    "        vectordb: The vector database with the information from the 10-K\n",
+    "        db_directory: The path to the vector database\n",
+    "    \"\"\"\n",
+    "\n",
     "    now = datetime.datetime.now()\n",
     "    timestamp = now.strftime(\"%Y%m%d%H%M%S\")\n",
     "    db_directory = \"db_\" + timestamp\n",
@@ -81,9 +91,13 @@
    "outputs": [],
    "source": [
     "def delete_chroma_db(db_directory):\n",
+    "    \"\"\"Deletes the Chroma DB created locally on the computer\n",
+    "\n",
+    "    Args:\n",
+    "        db_directory: The path to the vector database\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        shutil.rmtree(db_directory)\n",
-    "        #print(f\"Chroma database '{db_directory}' deleted successfully.\")\n",
     "    except FileNotFoundError:\n",
     "        print(f\"Chroma database '{db_directory}' not found.\")\n",
     "    except Exception as e:\n",
@@ -97,7 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#FOR FINETUNING PURPOSES ONLY\n",
     "def fill_json(path_to_json, path_to_10k, question, answer):\n",
+    "    \n",
     "    db, db_dir = create_knowledge_hub(path_to_10k)\n",
     "\n",
     "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
@@ -290,6 +306,16 @@
    "outputs": [],
    "source": [
     "def ask_gpt_finetuned_model(path_to_10k, question):\n",
+    "    \"\"\"Ask the fine-tuned GPT model a question based off a local 10-K document.\n",
+    "\n",
+    "    Args:\n",
+    "        path_to_10k: Relative path to the 10-K hosted locally on the user's computer\n",
+    "        question: Question to ask the model\n",
+    "\n",
+    "    Returns:\n",
+    "        answer: The answer given by the fine-tuned GPT model\n",
+    "    \"\"\"\n",
+    "\n",
     "    db, db_dir = create_knowledge_hub(path_to_10k)\n",
     "\n",
     "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
@@ -307,7 +333,9 @@
     "\n",
     "    delete_chroma_db(db_dir)\n",
     "    \n",
-    "    return completion.choices[0].message.content#[\"content\"]\n",
+    "    answer = completion.choices[0].message.content\n",
+    "\n",
+    "    return answer\n",
     "\n"
    ]
   },
@@ -346,12 +374,24 @@
    "outputs": [],
    "source": [
     "def ask_gpt_nonfinetuned_model(path_to_10k, question):\n",
+    "    \"\"\"Ask the original GPT model a question based off a local 10-K document.\n",
+    "\n",
+    "    Args:\n",
+    "        path_to_10k: Relative path to the 10-K hosted locally on the user's computer\n",
+    "        question: Question to ask the model\n",
+    "\n",
+    "    Returns:\n",
+    "        answer: The answer given by the GPT model\n",
+    "    \"\"\"\n",
+    "\n",
     "    db, db_dir = create_knowledge_hub(path_to_10k)\n",
     "\n",
     "    source1 = db.similarity_search(question, k = 2)[0].page_content\n",
     "    source2 = db.similarity_search(question, k = 2)[1].page_content\n",
     "\n",
-    "    completion = openai.ChatCompletion.create(\n",
+    "    client = OpenAI()\n",
+    "\n",
+    "    completion = client.ChatCompletion.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": \"You are a factual chatbot that answers questions about 10-K documents. You only answer with answers you find in the text, no outside information.\"},\n",
@@ -361,7 +401,9 @@
     "\n",
     "    delete_chroma_db(db_dir)\n",
     "    \n",
-    "    return completion.choices[0].message[\"content\"]"
+    "    answer = completion.choices[0].message.content\n",
+    "\n",
+    "    return answer"
    ]
   },
   {
