--- a/Exploration notebooks/10K_GPT.ipynb
+++ b/Exploration notebooks/10K_GPT.ipynb
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,26 +795,24 @@
     "    vectors = vectorizer.fit_transform([text1, text2])\n",
     "    # Calculate the cosine similarity between the vectors\n",
     "    similarity = cosine_similarity(vectors)\n",
-    "    print(similarity)\n"
+    "    print(similarity[0][1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1.]\n",
-      " [1. 1.]]\n",
-      "None\n"
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "print(compare_strings(\"hello\", \"hello\"))"
+    "compare_strings(\"This is a sample string.\", \"This is another example string.\")"
    ]
   },
   {
@@ -1280,7 +1278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
