--- a/Latest finetuning/Evaluation.ipynb
+++ b/Latest finetuning/Evaluation.ipynb
@@ -231,10 +231,7 @@
     "        file_path: The full file path of the document to be deleted.\n",
     "    \"\"\"\n",
     "    if os.path.exists(file_path):\n",
-    "        os.remove(file_path)\n",
-    "        print(f\"Deleted file: {file_path}\")\n",
-    "    else:\n",
-    "        print(f\"File not found: {file_path}\")"
+    "        os.remove(file_path)"
    ]
   },
   {
